# ruffwrap

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
src/ruffwrap/: cli.py
